Fix: mobile WIP projects overflowing on Chrome

--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -76,7 +76,8 @@
 
   body > main aside#sidebar .project img,
   body > main aside#sidebar .product img {
-    mask-image: linear-gradient(to bottom, rgba(0 0 0 100%), transparent 40%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), transparent 30%);
+    mask-image: linear-gradient(to bottom, rgba(0 0 0 100%), transparent 20%);
   }
 
 }
